syntax="proto3";
option java_package = "me.grpc.stubs";
service BanqueService {
  rpc convert(ConvertCurrencyRequest) returns(ConvertCurrencyResponse); // unary model
  rpc getCurrencyStream(ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse); // Server Streaming model
  rpc performStream(stream ConvertCurrencyRequest) returns(ConvertCurrencyResponse); // client Streaming model
  rpc fullStream(stream ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse); // Bidirectionnal Streaming model
}

message ConvertCurrencyRequest{
  string currencyFrom = 1 ;
  string currencyTo = 2 ;
  double amount = 3 ;
}

message ConvertCurrencyResponse{
  string currencyFrom = 1 ;
  string currencyTo = 2 ;
  double amount = 3 ;
  double result = 4 ;
}
